# ev_4_django

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django_ci.yml
api/: admin.py  ai_service.py  apps.py  constants.py  models.py  permissions.py  serializers.py  serializers_ia.py  services.py  signals.py  tests.py  urls.py  views.py  views_analytics.py  views_dashboard.py  views_sistema.py
api/cortex/: neural_net.py
api/migrations/: 0001_initial.py  0002_equipment_categoria_workorder_prioridad_and_more.py
api/servicios/: __init__.py  analitica_predictiva.py  automata.py  chat_service.py  comun.py  cortex_service.py  ia.py  ia_core.py  optimizador_inventario.py  recomendaciones.py  scraping.py  scraping_inteligente.py
api/tests/: test_services.py
api/v1/: urls.py
api/v2/: urls.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/static/css/: style.css
core/static/js/: dashboard.js  main.js
core/templates/: dashboard.html
k_ia/: Cargo.toml
k_ia/src/: lib.rs
scripts/: benchmark_neuro.py
sys/: asgi.py  settings.py  urls.py  wsgi.py
